force-app/main/default/objects/b3o__Certificate__c/b3o__Certificate__c.object-meta.xml
<CustomObject>
    <label>Certificate</label>
    <nameField>
        <displayFormat>CERT-{0}</displayFormat>
        <label>Certificate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>