force-app/main/default/objects/b3o__Certificate__c/fields/b3o__Category__c.field-meta.xml
<CustomField>
    <fullName>b3o__Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>