force-app/main/default/objects/b3o__Certificate__c/fields/b3o__Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>b3o__Certificate_Type__c</fullName>
    <label>Certificate Type</label>
    <referenceTo>b3o__Certificate_Type__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>