force-app/main/default/objects/b3o__Certificate__c/fields/b3o__Expires_In_Days__c.field-meta.xml
<CustomField>
    <fullName>b3o__Expires_In_Days__c</fullName>
    <description>Gets days to expiry of this certificate. If no end date is available, returns 1 year.</description>
    <formula>IF(NOT(ISNULL(b3o__End_Date__c)),b3o__End_Date__c - TODAY(), 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expires In (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>