force-app/main/default/objects/b3o__Certificate__c/fields/b3o__Is_Currently_Valid__c.field-meta.xml
<CustomField>
    <fullName>b3o__Is_Currently_Valid__c</fullName>
    <formula>AND(OR(ISNULL(b3o__End_Date__c), TODAY() &lt; b3o__End_Date__c ), OR(ISNULL(b3o__Start_Date__c), TODAY() &gt;= b3o__Start_Date__c), NOT b3o__Revoke_Certificate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Currently Valid?</label>
    <type>Checkbox</type>
</CustomField>