force-app/main/default/objects/b3o__Certificate__c/fields/b3o__Revoke_Certificate__c.field-meta.xml
<CustomField>
    <fullName>b3o__Revoke_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manual override to make the certificate invalid</inlineHelpText>
    <label>Revoke Certificate</label>
    <type>Checkbox</type>
</CustomField>