force-app/main/default/objects/b3o__Certificate__c/fields/b3o__Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Status__c</fullName>
    <formula>IF(b3o__Expires_In_Days__c&lt;=0,&quot;Expired&quot;,
IF(b3o__Expires_In_Days__c&lt;=30,&quot;Urgent Action&quot;,
IF(b3o__Expires_In_Days__c&lt;=60,&quot;Action Required&quot;,
&quot;Valid&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>