force-app/main/default/objects/b3o__Certificate__c/fields/b3o__Type__c.field-meta.xml
<CustomField>
    <fullName>b3o__Type__c</fullName>
    <formula>b3o__Certificate_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>