force-app/main/default/objects/b3o__Certificate__c/fields/Credentialing_Status__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Status__c</fullName>
    <label>Credentialing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>