force-app/main/default/objects/b3o__Certificate__c/validationRules/b3o__Require_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>b3o__Require_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>b3o__Certificate_Type__r.b3o__Require_Start_Date__c &amp;&amp; isblank(b3o__Start_Date__c)</errorConditionFormula>
    <errorDisplayField>b3o__Start_Date__c</errorDisplayField>
    <errorMessage>Start date of certificate is required</errorMessage>
</ValidationRule>